2005-05-06  Sarfraaz Ahmed <asarfraaz@novell.com>

	* misc/e-search-bar.c: (set_menu) Solaris gettext crashes on NULL 
	input string. Fixes #260312. Patch submitted by 
	Suresh Chandrasekharan <suresh.chandrasekharan@sun.com>

2005-04-28  Li Yuan  <li.yuan@sun.com>

	* misc/e-calendar-item.c: (e_calendar_item_realize),
	(e_calendar_item_set_selection_if_emission),
	(e_calendar_item_style_set):
	use widget->style instead of hard code colors.
	* misc/e-calendar-item.h:
	* misc/e-calendar.c: (e_calendar_style_set):
	call e_calendar_item_style_set when style changes.

	Fixes #6767.

2005-03-14  Not Zed  <NotZed@Ximian.com>

	* menus/gal-view-menus.c (build_menus): don't
	bonobo_ui_free_string from bonobo_ui_node_to_string - it should be
	g_free'd now (api chagne in bonobo).

2005-03-11  Sushma Rai  <rsushma@novell.com>

	* misc/e-send-options.c (setup_widgets): Not showing the send options
	notebook tabs, in case general options page is disabled. Fixes #73501

2005-02-09  Hans Petter Jansson  <hpj@novell.com>

	* e-timezone-dialog/Makefile.am:
	* menus/Makefile.am:
	* misc/Makefile.am: Install shared libraries to privlibdir.

2005-01-18  Hao Sheng  <hao.sheng@sun.com>

	* misc/e-dateedit.[ch]:
	(e_date_edit_get_entry): return the entry of the date edit.

2004-11-12  JP Rosevear  <jpr@novell.com>

	* menus/gal-view-menus.c: Convert to G_DEFINE_TYPE

2004-11-12  JP Rosevear  <jpr@novell.com>
	
	* e-timezone-dialog/e-timezone-dialog.c: convert to G_DEFINE_TYPE

2004-10-28  Li Yuan  <li.yuan@sun.com>

	* e-timezone-dialog/e-timezone-dialog.glade: Add a name for
	timezone combox.

2004-09-13  Rodney Dawes  <dobey@novell.com>

	* e-timezone-dialog/e-timezone-dialog.c (get_widgets):
	(on_map_motion, on_map_leave, e_timezone_dialog_set_timezone):
	* e-timezone-dialog/e-timezone-dialog.glade:
	Add the label back for previewing the timezone name, and set the
	label appropriately

	Fixes #64800

2004-08-17  Rodney Dawes  <dobey@novell.com>
